Fix le logo que rétricie sur mobile, enlève l'overlapping entre logo et signature et le menu mobile. Diminue la hauteur du header sur mobile

--- a/components/ui/atoms/LogoSvg/logo-svg.module.scss
+++ b/components/ui/atoms/LogoSvg/logo-svg.module.scss
@@ -1,4 +1,6 @@
 .logo {
-    height: 72px;
-    fill: var(--color-logo)
+  height: 72px;
+  min-height: 72px;
+
+  fill: var(--color-logo);
 }
