--- a/components/ui/molecules/MenuMobile/menu-mobile.module.scss
+++ b/components/ui/molecules/MenuMobile/menu-mobile.module.scss
@@ -1,68 +1,67 @@
 .container {
-    position: relative;
-    display: flex;
-    justify-content: flex-start;
-    align-items: stretch;
-    flex: 1;
-    width: 200px;
-    max-width: 100%;
-    height: 350px;
-    // border-radius: 20px;
-    border-radius: 0 0 0 18px;
-    overflow: hidden;
-    z-index: 3;
+  position: relative;
+  display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
+  flex: 1;
+  width: 200px;
+  max-width: 100%;
+  height: 350px;
+  // border-radius: 20px;
+  border-radius: 0 0 0 18px;
+  overflow: hidden;
+  z-index: 3;
 }
 
 .nav {
-    width: 100%;
+  width: 100%;
 }
 
 .background {
-    background-color: var(--background-second);
-    position: absolute;
-    inset: 0;
+  background-color: var(--background-second);
+  position: absolute;
+  inset: 0;
 }
 
 .toggleContainer {
-    outline: none;
-    border: none;
-    user-select: none;
-    cursor: pointer;
-    position: absolute;
-    top: 48px;
-    right: 25px;
-    width: 50px;
-    height: 50px;
-    background: transparent;
+  position: absolute;
+  outline: none;
+  border: none;
+  user-select: none;
+  cursor: pointer;
+  top: 37px;
+  right: 24px;
+  width: 30px;
+  height: 30px;
+  background: transparent;
 }
 
 .list {
-    list-style: none;
-    padding: 25px;
-    margin: 0;
-    position: absolute;
-    top: 40px;
+  list-style: none;
+  padding: 25px;
+  margin: 0;
+  position: absolute;
+  top: 40px;
 }
 
 .listItem {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    padding: 0;
-    margin-top: 24px;
-    list-style: none;
-    margin-bottom: 40px;
-    cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 0;
+  margin-top: 24px;
+  list-style: none;
+  margin-bottom: 40px;
+  cursor: pointer;
 }
 
 .icon {
-    margin-right: 20px;
+  margin-right: 20px;
 }
 
 .text {
-    font-size: 1.5rem;
-    font-family: var(--font-menu-mobile);
-    width: 200px;
-    color: var(--color-text-second);
-
+  font-size: 1.5rem;
+  font-family: var(--font-menu-mobile);
+  width: 200px;
+  color: var(--color-text-second);
 }
